--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ html {
   --text-color: #000000;
   --border-color: #eeeeee;
   /* Border-color for portfolio */
+  --backdrop: rgba(0, 0, 0, 0.2);
   --footer-color: rgba(255, 255, 255, 0.1);
   --hero-overlay-color: rgba(47, 48, 58, 0.4);
   --contacts-color: rgba(255, 255, 255, 0.6);
@@ -392,7 +393,7 @@ textarea {
 
 /* Section3
 ===================== */
-.scils__page {
+.scils {
   padding-bottom: 94px;
 }
 
@@ -452,7 +453,7 @@ textarea {
   background-color: var(--team-fond-color);
 }
 
-.team .list {
+.team__list {
   display: flex;
   padding: 0;
 }
@@ -1008,8 +1009,7 @@ textarea {
   left: 0;
   min-width: 100%;
   min-height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  /*z-index: 2;*/
+  background-color: var(--backdrop);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1040,9 +1040,6 @@ textarea {
 
 .backdrop__btn {
   padding: 0;
-}
-
-.backdrop__btn {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -1199,7 +1196,7 @@ label.comment__label {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
-
+color: gre;
   transform: scale(1);
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
