--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -11,11 +11,6 @@ ul {
     list-style-type: none;
 }
 
-.img {
-    width: 370px;
-    height: 294px;
-}
-
 body {
     margin: 0;
     font-family: "Roboto", sans-serif;
@@ -33,16 +28,16 @@ p {
 
 img {
     display: block;
+    width: 100%;
+    height: auto;
 }
 
-textarea {
-    vertical-align: none;
-    width: 448px;
-    padding: 0;
-    margin: 0;
-}
+
 .list {
     padding: 0;
     margin: 0;
     list-style: none;
+}
+a {
+    text-decoration: none;
 }
