--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -17,7 +17,7 @@
   color: var(--secondary-text-color);
 }
 
-label.agreement__text {
+.agreement__text {
   display: flex;
   align-items:center;
 }
