--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -105,7 +105,12 @@ label.comment__label {
     transition-timing-function: var(--transition-timing-function);
 }
 
+
 .comment__name {
+    vertical-align: none;
+    width: 448px;
+    padding: 0;
+    margin: 0;
     padding: 12px 16px;
     width: 448px;
     height: 120px;
