--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -71,7 +71,7 @@
 }
 
 .footer__text {
-@include font (14px, 400, 1.17, 0.03em);
+@include font (14px, 700, 1.17, 0.03em);
     text-transform: uppercase;
     color: var(--main-color);
     margin-bottom: 20px;
@@ -157,6 +157,9 @@
 
 /* FOOTER BLOCK BUTTON */
 .button__subcribe {
+    display: flex;
+    width: 200px;
+    height: 50px;
     @extend %align-items;
     font-weight: bold;
 @include font (16px, 700, 1.88, 0.06em);
