--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,9 +4,9 @@
 @import './utils/mixins'; 
 /////// BASE
 @import './base/common';
-@import './base/conteiner';
 
 /////// COMPONENTS
+@import './components/container';
 @import './components/logo';
 @import './components/button';
 @import './components/title';
