--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,10 @@
 /////// COMPONENTS
 @import './components/container';
 @import './components/logo';
+@import './components/contacts';
 @import './components/button';
 @import './components/title';
+@import './components/texts';
 @import './components/social-list';
 @import './components/filter-btn';
 @import './components/backdrop';
