--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
       0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.button__subcribe, .footer-icon__link, .clients__link, .scils__overlay, .contacts-header__icon, .contacts-header__link--env, .contacts-header__link--tel, .contacts-header__link, .nav, .main-nav.container, .backdrop__btn, .icon__link, .icon__list {
+.button__subcribe, .footer-icon__link, .clients__link, .scils__overlay, .contacts-header__icon, .nav, .main-nav.container, .backdrop__btn, .icon__link, .icon__list, .contacts-header__link--env, .contacts-header__link--tel, .contacts-header__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,6 +111,38 @@ a {
 
 .nav__logo--blue {
   color: var(--text-color);
+}
+
+.contacts-header__link {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  color: var(--secondary-text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-timing-function);
+          transition-timing-function: var(--transition-timing-function);
+}
+.contacts-header__link--env, .contacts-header__link--tel {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: var(--secondary-text-color);
+}
+.contacts-header__link--env:hover, .contacts-header__link--tel:hover {
+  color: var(--accent-color);
+}
+
+.contacts-header__link--env,
+.contacts-header__link--tel {
+  text-decoration: none;
 }
 
 .button {
@@ -621,38 +653,6 @@ label.comment__label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.contacts-header__link {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-decoration: none;
-  color: var(--secondary-text-color);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: var(--transition-duration);
-          transition-duration: var(--transition-duration);
-  -webkit-transition-timing-function: var(--transition-timing-function);
-          transition-timing-function: var(--transition-timing-function);
-}
-.contacts-header__link--env, .contacts-header__link--tel {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: var(--secondary-text-color);
-}
-.contacts-header__link--env:hover, .contacts-header__link--tel:hover {
-  color: var(--accent-color);
-}
-
-.contacts-header__link--env,
-.contacts-header__link--tel {
-  text-decoration: none;
 }
 
 .contacts-header__icon {
