--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,16 +6,6 @@
     margin-right: auto;
 }
 
-.form__title {
-    display: block;
-    margin-bottom: 12px;
-@include font (20px, 700, 1.15, 0.03em);
-
-    text-align: center;
-    color: var(--primary-text-color);
-
-}
-
 .form__list {
     display: flex;
     flex-direction: column;
@@ -31,7 +21,7 @@
     margin-bottom: 10px;
 }
 
-li.form__item:last-child {
+.form__item:last-child {
     margin-bottom: 0;
 }
 
@@ -60,39 +50,7 @@ li.form__item:last-child {
     }
 }
 
-.form__textfield {
-    padding: 12px 18px 12px 42px;
-    width: 100%;
-    height: 40px;
-
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-
-    letter-spacing: 0.01em;
-    color: var(--primary-text-color);
-    transition-duration: var(--transition-duration);
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        border-color: var(--accent-color);
-    }
-}
-
-
-.form__textfield:hover+.form__icon {
-    fill: var(--accent-color);
-    border-color: var(--accent-color);
-}
-
-.form__textfield:focus+.form__icon {
-    fill: var(--accent-color);
-    border-color: var(--accent-color);
-}
-
-
-
-label.comment__label {
+.comment__label {
     display: flex;
     margin-bottom: 4px;
     top: 0px;
